cambios parciales de las nuevas funciones

--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -9,6 +9,7 @@
         android:title="@string/logout"
         app:showAsAction="never" />
     <item
+        android:id="@+id/whoIs"
         android:orderInCategory="100"
         app:showAsAction="ifRoom"
         android:title=""
